IC-Test/objects/Related_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Owner_Department__c</fullName>
        <formula>Account__r.Owner.Department</formula>
        <label>Account Owner Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Division__c</fullName>
        <formula>Account__r.Owner.Division</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>HYPERLINK(Account__r.OwnerLink__c,   Account__r.Owner.FirstName +  &quot; &quot; + Account__r.Owner.LastName,&quot;_self&quot; )</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Accounts</relationshipLabel>
        <relationshipName>Related_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Related Accounts</relationshipLabel>
        <relationshipName>Related_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Related Account</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Related Account</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>